fix contrast ratio

--- a/styles/prism.css
+++ b/styles/prism.css
@@ -47,7 +47,7 @@
 .token.constant,
 .token.symbol,
 .token.deleted {
-  @apply text-green-500;
+  @apply text-green-700 dark:text-green-500;
 }
 
 .token.selector,
@@ -56,7 +56,7 @@
 .token.char,
 .token.builtin,
 .token.inserted {
-  @apply text-purple-500;
+  @apply text-purple-600 dark:text-purple-400;
 }
 
 .token.operator,
@@ -70,18 +70,18 @@
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-  @apply text-blue-500;
+  @apply text-blue-600 dark:text-blue-400;
 }
 
 .token.function,
 .token.class-name {
-  @apply text-pink-500;
+  @apply text-pink-600 dark:text-pink-400;
 }
 
 .token.regex,
 .token.important,
 .token.variable {
-  @apply text-yellow-500;
+  @apply text-yellow-700 dark:text-yellow-500;
 }
 
 .rehype-code-title {
